--- a/css/styles.css
+++ b/css/styles.css
@@ -668,6 +668,15 @@ progress {
   height: auto;
 }
 
+.img-thumbnail-collapse {
+  padding: 0.25rem;
+  background-color: #fff;
+  border: 1px solid #dee2e6;
+  border-radius: 0.25rem;
+  width: 30%;
+  height: auto;
+}
+
 .figure {
   display: inline-block;
 }
@@ -4877,7 +4886,7 @@ fieldset:disabled .btn {
   word-wrap: break-word;
   background-color: #fff;
   background-clip: border-box;
-  border: 1px solid rgba(0, 0, 0, 0.125);
+  border: 0px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem;
 }
 
